# Pulsar

./: .gitignore  AGENTS.md  Pulsar.spec  QWEN.md  README.md  SpiceEDA.spec  main.py  p2n2222a_electrical_chars.txt  pyproject.toml  requirements.txt  start-pulsar-ai.sh
EDA/: AGENTS.md
EDA/app/: canvas.py  main_window.py  serializer.py
EDA/tedax/: netlist_exporter.py
Mod/: README.md
Mod/BJT/: 2N2222.lib  KT312A.lib  KT315B.lib  KT361B.lib  P2N2222A.lib
Mod/Comparators/: TL331.lib  data.tsv  output.txt  test_tl331.cir  test_tl331_dc.cir  test_tl331_debug.cir  test_tl331_tran.cir
autocomplete/: __init__.py  spice_completer.py
core/: __init__.py  component_lib.py
editor/: __init__.py  editor_window.py  line_highlight_editor.py  line_number_area.py  spice_highlighter.py
examples/: RC_timer.cir  RC_timer.sch  Test_2.cir  a.cir  rc_filter_template.cir  test_1.cir  test_3.cir  test_4.cir  test_ac.cir  test_circuit.cir  test_dc.cir  test_kt312a.cir  test_kt315.cir  test_kt361.cir  test_lm741.cir  test_me4856_va.cir  test_optimized_ce.cir  test_rc_delay.cir  test_voltage_divider.cir
plotter/: __init__.py  spice_plotter.py
prompts/: create-mosfet.md  create-opamp-model.md  test-model.md
simulator/: __init__.py  netlist_validator.py  ngspice_simulator.py
skills/: pulsar-modeling.md
tests/: test.cir  test.sch  test_basic.py  test_drag_pins.py  test_netlist_validator.py  test_spice_template.py
ui/: __init__.py  ac_dialog.py  netlist_viewer_dialog.py  op_dialog.py  settings_dialog.py  side_panel.py  unified_tabs.py
utils/: spice_template.py
(+42 files in other folders)
