[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpiceEDA"
version = "0.3.0"
description = "GUI-приложение для схемотехнического проектирования и SPICE-моделирования"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.gui-scripts]
spiceeda = "main:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["core*", "editor*", "simulator*", "plotter*", "EDA*", "ui*", "utils*"]
